# cdp-backend

./: .buildinfo  .cookiecutter.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  cdp_backend.annotation.html  cdp_backend.bin.html  cdp_backend.database.html  cdp_backend.file_store.html  cdp_backend.html  cdp_backend.infrastructure.html  cdp_backend.pipeline.html  cdp_backend.sr_models.html  cdp_backend.utils.html  cdp_backend.utils.resources.html  codecov.yml  contributing.html  database_schema.html  event_data_ingestion_model.html  event_gather_pipeline.html  export-to-sqlite.py  genindex.html  index.html  ingestion_models.html  installation.html  math.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  (+5 more)
.doctrees/: cdp_backend.annotation.doctree  cdp_backend.bin.doctree  cdp_backend.database.doctree  cdp_backend.doctree  cdp_backend.file_store.doctree  cdp_backend.infrastructure.doctree  cdp_backend.pipeline.doctree  cdp_backend.sr_models.doctree  cdp_backend.utils.doctree  cdp_backend.utils.resources.doctree  contributing.doctree  database_schema.doctree  environment.pickle  event_gather_pipeline.doctree  index.doctree  ingestion_models.doctree  installation.doctree  modules.doctree  transcript_model.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-docs.yml  build-main.yml  build-master.yml  check-pr.yml  ci.yml  docs.yml  publish.yml  test-and-lint.yml  update-prod.yml  update-stg.yml
.pulumi/: ci.json
_modules/: cdp_backend.html  index.html
_modules/cdp_backend/: infrastructure.html
_modules/cdp_backend/annotation/: speaker_labels.html
_modules/cdp_backend/database/: constants.html  exceptions.html  functions.html  models.html  types.html  validators.html
_modules/cdp_backend/file_store/: functions.html
_modules/cdp_backend/infrastructure/: cdp_stack.html
_modules/cdp_backend/pipeline/: cdp_event_gather_pipeline.html  event_gather_pipeline.html  event_index_pipeline.html  generate_event_index_pipeline.html  ingestion_models.html  mock_get_events.html  pipeline_config.html  process_event_index_chunk_pipeline.html  transcript_model.html
_modules/cdp_backend/sr_models/: google_cloud_sr_model.html  sr_model.html  webvtt_sr_model.html  whisper.html
_modules/cdp_backend/utils/: constants_utils.html  file_utils.html  string_utils.html
_modules/dataclasses_json/: api.html
_modules/fireo/managers/: managers.html
_sources/: cdp_backend.annotation.rst.txt  cdp_backend.bin.rst.txt  cdp_backend.database.rst.txt  cdp_backend.file_store.rst.txt  cdp_backend.infrastructure.rst.txt  cdp_backend.pipeline.rst.txt  cdp_backend.rst.txt  cdp_backend.sr_models.rst.txt  cdp_backend.utils.resources.rst.txt  cdp_backend.utils.rst.txt  event_data_ingestion_model.md.txt  event_gather_pipeline.md.txt  index.rst.txt  ingestion_models.md.txt  modules.rst.txt  transcript_model.md.txt
_static/: cdp_database_diagram.dot  documentation_options.js
cdp-env/: pyvenv.cfg
cdp_backend/: __init__.py  export-to-sqlite.py  version.py
cdp_backend/annotation/: __init__.py  speaker_labels.py
cdp_backend/audio_splitters/: __init__.py  audio_splitter.py  ffmpeg_audio_splitter.py
cdp_backend/database/: .models.py.swp  __init__.py  constants.py  exceptions.py  functions.py  handler.py  models.py  sqlite_models.py  types.py  validators.py
cdp_backend/file_store/: __init__.py  functions.py
cdp_backend/infrastructure/: Justfile  __init__.py  cdp_stack.py  dev-cookiecutter-metadata.yaml  firebase.json  lifecycle-rules.json
cdp_backend/infrastructure/gcloud-functions/: README.md
cdp_backend/pipeline/: .event_gather_pipeline.py.swp  __init__.py  cdp_event_gather_pipeline.py  event_gather_pipeline.py  event_index_pipeline.py  generate_event_index_pipeline.py  ingestion_models.py  mock_get_events.py  pipeline_config.py  process_event_index_chunk_pipeline.py  thumbnail_generator.py  transcript_model.py  upload_event_index_pipeline.py
cdp_backend/sr_models/: __init__.py  constants.py  google_cloud_sr_model.py  sr_functions.py  sr_model.py  webvtt_sr_model.py  whisper.py
cdp_backend/tests/: __init__.py  conftest.py  test_function.py  test_utils.py
cdp_backend/tests/audio_splitters/: __init__.py  test_ffmpeg_audio_splitter.py
cdp_backend/tests/data/: fake_caption.vtt  fake_creds.json
cdp_backend/tests/database/: .test_validators.py.swp  __init__.py  test_functions.py  test_models.py  test_validators.py
cdp_backend/tests/file_store/: .test_functions.py.swp  test_functions.py
cdp_backend/tests/infrastructure/: __init__.py  test_cdp_stack.py
cdp_backend/tests/pipeline/: __init__.py  test_cdp_event_gather_pipeline.py  test_event_gather_pipeline.py  test_event_index_pipeline.py  test_ingestion_models.py  test_pipeline_config.py  test_thumbnail_generator.py  test_transcript_model.py
cdp_backend/tests/resources/: XALBGkjkUPQ.mp4.part  boston_captions.vtt  boston_transcript.json  brief_080221_2012161.vtt  code_of_conduct.docx  code_of_conduct.txt  example_doc.doc  example_docx.docx  example_docx_one_word.docx  example_footer_only.doc  example_footer_only.docx  (+15 more)
cdp_backend/utils/: __init__.py  constants_utils.py  event_func.py  file_utils.py  matter_extraction.py  string_utils.py
dev-infrastructure/: Justfile  Makefile  Pulumi.yaml  README.md  __main__.py  firestore.indexes.json
docs/: Makefile  conf.py  database_schema.md  database_schema.rst  event_data_ingestion_model.md  event_data_ingestion_model.rst  event_data_ingestion_model.template  event_gather_pipeline.md  event_gather_pipeline.rst  finding_legistar_id.md  index.rst  ingestion_models.template  installation.rst  make.bat  transcript_model.md  transcript_model.template
example-configs/: filled-event.json  many-event.json  min-event.json  random-event.json
example-infrastructure/: Makefile  Pulumi.yaml  README.md  __main__.py
gcloud_functions/hello-world/: main.py  test_main.py
(+27 files in other folders)
